<resources>
    <string name="app_name">WhereAppU</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="no_internet_connection_error_msg">Unable to connect to internet, please try later</string>
    <string name="post_query">data</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_name">Introduce name</string>
    <string name="prompt_phone_number">introduce phone number</string>
    <string name="prompt_email">introduce email</string>
    <string name="action_sign_in_register">sign in</string>
    <string name="login_progress_signing_in">signing</string>
    <string name="error_field_required">field required</string>
    <string name="error_invalid_email">invalid mail format</string>
    <string name="title_activity_logging">LoggingActivity</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="title_activity_tabs">WhereAppU</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_contacts">sync_contacts</string>
    <string name="action_clear">clear</string>
    <string name="action_refresh">refresh</string>
    <string name="title_activity_edit_place">EditPlaceActivity</string>
    <string name="title_activity_maps">Select place location</string>

    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">Click notification to return to app</string>
    <string name="title_activity_chat">ChatActivity</string>

</resources>
