<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context=".LoginActivity">
    <!-- Login form -->
    <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <EditText
                    android:id="@+id/login_name"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/prompt_name"
                    />


            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                <EditText
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/editText"
                        android:text="0034"
                        android:enabled="false"
                        android:layout_gravity="left|center_vertical"/>

                <EditText
                        android:id="@+id/login_phoneNumber"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:hint="@string/prompt_phone_number"
                        />

            </LinearLayout>

            <EditText
                    android:id="@+id/login_email"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    />

            <Button android:id="@+id/sign_in_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_sign_in_register"
                    android:paddingLeft="32dp"
                    android:paddingRight="32dp"
                    android:layout_gravity="right"
                    android:enabled="false"/>

        </LinearLayout>

    </ScrollView>

    <!-- Login progress -->
    <LinearLayout android:id="@+id/login_status"
                  android:visibility="gone"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:layout_gravity="center"
                  android:orientation="vertical"
                  android:alpha="0.5"
                  android:background="#00b4ff">
        <ProgressBar style="?android:attr/progressBarStyleLarge"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
                     android:layout_gravity="center_vertical|center_horizontal"
                     android:layout_weight="1"
                />
        <TextView
                android:id="@+id/login_status_message"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:fontFamily="sans-serif-light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/login_progress_signing_in"
                android:layout_gravity="center"/>
    </LinearLayout>
</merge>
